Changes after KPresenter 1.1
============================
- Port to kotext
- New effect : kpresenter can play sounds
- Thumbnail mode for the sidebar
- Add notebar
- Add a real statusbar
- Add New Tool : freehand, polyline, quadric bezier curve, cubic bezier curve, convex/concave polygon
- Add zoom support
- Improve undo/redo (now we can undo/redo "insert new page"/"delete page"/"paste page"/"Duplicate page")
- Now kpresenter has real page
- Limit position/size object to page
- spell checking/search/find works on all page
