@@ -21,7 +21,7 @@
 		editor:		The program this file was written with
 		mime:		The MIME type (must always have the value application/x-kpresenter
 -->
-<!ELEMENT DOC (PAPER | BACKGROUND | ,VARIABLESETTINGS | HEADER | FOOTER | PAGETITLES | PAGENOTES | OBJECTS | INFINITLOOP | MANUALSWITCH | PRESSPEED | PIXMAPS | SELSLIDES | PIXMAPS | CLIPARTS)* >
+<!ELEMENT DOC (PAPER | BACKGROUND | ,VARIABLESETTINGS | HEADER | FOOTER | PAGETITLES | PAGENOTES | OBJECTS | INFINITLOOP | MANUALSWITCH | PRESSPEED | PIXMAPS | SELSLIDES | PIXMAPS | CLIPARTS | SHOWPRESENTATIONDURATION)* >
 <!ATTLIST DOC	author CDATA #IMPLIED
 				email CDATA #IMPLIED
 				editor CDATA #IMPLIED
@@ -495,6 +495,8 @@
 <!ELEMENT PRESSPEED EMPTY>
 <!ATTLIST PRESSPEED value NMTOKEN #REQUIRED>
 
+<!ELEMENT SHOWPRESENTATIONDURATION EMPTY>
+<!ATTLIST SHOWPRESENTATIONDURATION value NMTOKEN #REQUIRED>
 
 <!ELEMENT BACKGROUND (PAGE*) >
 <!ATTLIST BACKGROUND	rastX	NMTOKEN	#REQUIRED
